--- a/Untitled-3.html
+++ b/Untitled-3.html
@@ -56,7 +56,7 @@
         </style>
 </head>
 <body>
-        <ul class="menu horizontal">
+        <ul class="menu-horizontal">
                 <li class="menu-item"><a href ="#">Главная</a></li>
                 <li class="menu-item"><a href ="#">Товары</a></li>
                 <li class="menu-item"><a href ="#">О компании</a></li>
